Añadido un nuevo post sobre Scala y corregido un verbo en el post sobre el libro

--- a/drafts/slow-and-steady.html
+++ b/drafts/slow-and-steady.html
@@ -66,6 +66,10 @@ _because I know_
 gqap and `fo+=a`
 -->
 
+<!--
+Volume 01 - page 84
+-->
+
 <p>It is time to stop, and reflect. I arrived possibly to the half of the way, so,
 it is a good moment to look back and see the many things that I have done
 wrong, and the few things that I have done well. </p>
@@ -114,6 +118,13 @@ learned to ride a bike because of that, and that is interesting, because I
 never tried to ride a bike after I fell down so badly when I was a kid. Once
 again, as with Irasu, I was hitted. Even worse, I was swinged. As one song in
 Spanish says: <strong>Ácabame de matar, pa' qué me dejas herido</strong>. </p>
+<h2></h2>
+<p>I became thirty on January, I was alone in my room, I woke up late, when it was
+already dark, it was too cold. It was horrible and it has been horrible since
+then. I was alone, it was one week after the New Year eve, when I was also
+alone, and I ate a ramen soup, it was one week after Christmas, where I was also
+alone.</p>
+<p>I have lost the motivation. I really don't want to live anymore. </p>
         </div>
         <!--div class="">
             Here, add ToC, write Python code!
