--- a/sidney.html
+++ b/sidney.html
@@ -63,7 +63,7 @@ Mr. Ruche and Albert along with the kids go to the Louvre Museum, specifically,
 to the Glass Pyramid.
 -->
 
-<p>I am update this post from time to time.</p>
+<p>I am updating this post from time to time.</p>
 <h2>Chapter 4. The Rainforest Library.</h2>
 <p>Mr. Ruche receives the crate of books that Grosrouvre sent him. The collection
 is called the Rainforest Library!</p>
