--- a/deutsch-phrases.html
+++ b/deutsch-phrases.html
@@ -4,7 +4,7 @@
         <title>German phrases</title>
         <meta charset="utf-8" />
         <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Trino swap file Full Atom Feed" />
-        <link href="/feeds/deutsch.atom.xml" type="application/atom+xml" rel="alternate" title="Trino swap file Categories Atom Feed" />
+        <link href="/feeds/category.slug.atom.xml" type="application/atom+xml" rel="alternate" title="Trino swap file Categories Atom Feed" />
 
         <meta charset="utf-8" />
         <meta content="True" name="HandheldFriendly">
@@ -37,7 +37,7 @@
         <div id="date">            <a href="/author/omar-gutierrez/">Omar Gutiérrez</a>
         </div>
         <div id="date">
-            Mo 01 April 2019
+            lun 01 abril 2019
         </div>
         <div class="tags">
         </div>
